[project]
name = "niri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "markdown-callouts>=0.4.0",
    "mkdocs-material>=9.6.15",
    "pygments",
]

[tool.uv.sources]
pygments = { git = "https://github.com/chinatsu/pygments" }
