[package]
name = "niri-ipc"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true, optional = true }
schemars = "0.8.21"
serde.workspace = true
serde_json.workspace = true

[features]
clap = ["dep:clap"]
