[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
niri-ipc = { path = "../niri-ipc" }
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.10"
syn = "2.0"
serde_json = "1.0"
toml = "0.8"
walkdir = "2.4"
